wowlets learn this

--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
     <head>
 	   <meta charset="UTF-8">
-	   <title>My First Page</title>
+	   <title>changes are made</title>
 	</head>
 	<body>
 		<nav>
 		<header></header>
 		<main></main>
-		<footer></footer>
+		<footer></footer><h1>lol</h1>
 	</body>
 </html>
